Bug 495557 - kscreen-doctor reports RgbRange "unknown" and a peak brightness of 0 nits for the LG CX
Summary: kscreen-doctor reports RgbRange "unknown" and a peak brightness of 0 nits for...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.2.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-29 23:25 UTC by bahhz2lx
Modified: 2024-11-07 13:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kscreen-doctor -o | ansifilter > kscreen.txt (1.93 KB, text/plain)
2024-10-29 23:25 UTC, bahhz2lx
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bahhz2lx 2024-10-29 23:25:01 UTC
Created attachment 175350 [details]
kscreen-doctor -o | ansifilter > kscreen.txt

SUMMARY
kscreen-doctor reports RgbRange "unknown" and a peak brightness of 0 nits for the LG CX

STEPS TO REPRODUCE
1. navigate to the terminal and run kscreen-doctor -o

OBSERVED RESULT
see attachment 

EXPECTED RESULT
RGB range should not be unknown and peak brightness should be greater than 0 nits

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.11.5-300.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 30.5 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4090/PCIe/SSE2

ADDITIONAL INFORMATION
Output: 1 HDMI-A-2: refers to the LG CX
Output: 2 DP-3:  refers to a Denon x3800H which is plugged in via DP -> HDMI adapter

The ladder is not plugged into any other device via HDMI passthrough.  
Both devices are connected to the same Nvidia 4090 GPU via HDMI + DP ports

modinfo -F version nvidia 
565.57.01

Note:  It's unlikely that this is issue is exclusive to the 565 beta drivers
I've actually never seen it work properly even with previous stable releases.
Comment 1 Zamundaaa 2024-11-06 12:29:47 UTC
This is expected. Your graphics driver doesn't support reporting or controlling rgb range, and the screen doesn't report a peak brightness (which is what the zero means).
Comment 2 Bug Janitor Service 2024-11-06 12:35:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libkscreen/-/merge_requests/205
Comment 3 Zamundaaa 2024-11-07 13:45:43 UTC
Git commit 5e019ba5dba8da4509849b6f821a24a145421b89 by Xaver Hugl.
Committed on 06/11/2024 at 12:34.
Pushed by zamundaaa into branch 'master'.

doctor: clarify the meaning of max. brightness zero

M  +10   -2    src/doctor/doctor.cpp

https://invent.kde.org/plasma/libkscreen/-/commit/5e019ba5dba8da4509849b6f821a24a145421b89
Comment 4 Zamundaaa 2024-11-07 13:49:44 UTC
Git commit 7660ca1b6ccd2beeaaf40f91f8fd64ec3e6bb704 by Xaver Hugl.
Committed on 07/11/2024 at 13:45.
Pushed by zamundaaa into branch 'Plasma/6.2'.

doctor: clarify the meaning of max. brightness zero


(cherry picked from commit 5e019ba5dba8da4509849b6f821a24a145421b89)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +10   -2    src/doctor/doctor.cpp

https://invent.kde.org/plasma/libkscreen/-/commit/7660ca1b6ccd2beeaaf40f91f8fd64ec3e6bb704