doctor: clarify the meaning of max. brightness zero

BUG: 495557


(cherry picked from commit 5e019ba5dba8da4509849b6f821a24a145421b89)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>